--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,10 @@
 --- 
-title: "YOUR TITLE HERE"
-author: "YOUR NAME HERE"
+title: "Large-scale Geospatial Analysis and Computing in R"
+author: "Vinit Sehgal, Debasish Mishra, Frank Adekilae"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 ---
 
-# Down the rabbit-hole
+# Data Visualization and Geospatial Analysis With R
+
 
