--- a/04-Largescale_geospatial_analysis_2023_v2.Rmd
+++ b/04-Largescale_geospatial_analysis_2023_v2.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Data Visualization and Geospatial Analysis With R"
 author: "Vinit Sehgal & Debasish Mishra, Texas A&M University"
-date: "October/2023"
+date: "December/2024"
 output:
   rmdformats::readthedown:
     self_contained: true
@@ -47,7 +47,7 @@ The codes are tested on R `version 4.2.3- Shortstop Beagle` and `version 4.1.2 -
 To update, see section 5.2.
 
 ***
-# CHAPTER 0. Import libraries and sample dataset
+# Import libraries and sample dataset
 ***
 
 We will begin by loading necessary libraries.
@@ -108,7 +108,7 @@ list.files("./SampleData-master")   # List folder contents
 ```
 
 ***
-# CHAPTER 1. Raster and shapefile visualization
+# Raster and shapefile visualization
 ***
 
 A `geographic information system`, or `GIS` refers to a platform which can map, analyzes and manipulate **geographically referenced** dataset. 
@@ -122,7 +122,7 @@ A geographically referenced data (or geo-referenced data) is a spatial dataset w
 
 A quick and helpful review of spatial data can be found here: <https://spatialvision.com.au/blog-raster-and-vector-data-in-gis/>
 
-## 1.1. Plotting raster data
+## Plotting raster data
 In this section, we will plot global raster data of surface (~5 cm) soil moisture from SMAP. In this process we will explore functions from `terra`, and `tidyterra` packages.  
 
 Let's start by importing the necessary packages. 
@@ -169,9 +169,9 @@ What are the different `features` of the above plot?
 
 *Expert Note*: terra’s functionality is largely the same as the more mature `raster` package (created by the same developer, Robert Hijmans), but are usually more computationally efficient than raster equivalents. However, one can seamlessly translate between the two types of object to ensure backwards compatibility with older scripts and packages, for example, with the functions raster(), stack(), and brick() in the `raster` package.
 
-## 1.2. Customizing `terra` plot options
+## Customizing `terra` plot options
 
-### 1.2.1 Scientific Color palettes
+### Scientific Color palettes
 We will generate custom color palettes for better visualization. We will demonstrate the usage of `cetcolor` and `scico` package which provide access to the perceptually uniform and colour-blindness friendly palettes.
 
 <br>
@@ -204,7 +204,7 @@ unikn::seecol(mypal2)
 
 ```
 
-### 1.2.2 Customize `terra` plots
+### Customize `terra` plots
 
 There is a long list of customizable operations available while plotting rasters in R. Let's play with some of these options. We will start with basic plot from terra, and then venture into more powerful  tmap and tidyterra packages.
 Try `horizontal=TRUE`, `interpolate=FALSE`, change `xlim=c(-180, 180)` with `asp=1`, or try `legend.shrink=0.4`.
@@ -264,7 +264,7 @@ mapview(brick(sm),            # Convert SpatRaster to RasterBrick
 
 ```
 
-## 1.3. Plotting raster data using `tidyterra`
+## Plotting raster data using `tidyterra`
 
 `tidyterra` is a package that add common methods from the tidyverse for SpatRaster and SpatVectors objects created with the {`terra`} package. It also adds specific `geom_spat*()` functions for plotting these kind of objects with {ggplot2}.
 
@@ -339,7 +339,7 @@ tmap_save(tmap_SM,                    #	tmap object
   
 ```
 
-## 1.4. Plotting vector data
+## Plotting vector data
 Importing and plotting shapefiles is equally easy in R. We will import the shapefile of the updated global `IPCC climate reference regions` (https://doi.org/10.5194/essd-12-2959-2020) as Simple Feature (`sf`) Object. We will also use global `coastline` shapefile from the web for plotting.
 
 Note: Even though terra provides vect() function to handle vector data, sf package is most suitable and powerful for manipulating and plotting purposes.
@@ -400,7 +400,7 @@ tm_shape(IPCC_shp[c(3,4,6,7),])+                       # Selected regions from '
 ```
 Note: Each layer (here 3) needs to be added as with tm_shape()!
 
-## 1.5. Reprojection of rasters using `terra::project`
+## Reprojection of rasters using `terra::project`
 
 A coordinate reference system (CRS) is used to relate locations on Earth (which is a 3-D spheroid) to a 2-D projected map using coordinates (for example latitude and longitude). Projected CRSs are usually expressed in Easting and Northing (x and y) values corresponding to long-lat values in Geographic CRS. A good description of coordinate reference systems and their importance can be found here: <https://docs.qgis.org/3.4/en/docs/gentle_gis_introduction/coordinate_reference_systems.html>
 <https://datacarpentry.org/organization-geospatial/03-crs/>
@@ -514,10 +514,10 @@ More excellent examples on making maps in R can be found here:  <https://bookdow
 Quintessential resource for reference on charts and plots in R: <https://www.r-graph-gallery.com/index.html>. 
 
 ***
-# CHAPTER 2. Geospatial operations on raster/vector data
+# Geospatial operations on raster/vector data
 ***
 
-## 2.1. Raster resampling 
+## Raster resampling 
 We will demonstrate how to change the resolution of Spatraster files using `terra::aggregate` (fine to coarse), `terra::disagg` (coarse to fine), and resampling values from one raster to another using `terra::resample` function. We will use global aridity and soil moisture Spatrasters for this purpose. 
 
 ```{r resampling, message = FALSE, warning = FALSE}
@@ -557,7 +557,7 @@ terra::plot(aridityResamp, col=mypal2, main= "Aridity at Coarser Resolution")
 
 ```
 
-## 2.2. Raster summary statistics 
+## Raster summary statistics 
 
 Arithmetic operations a.k.a. arith-generic (+, -, *, /, ^, %%, %/%) on Spatrasters closely resemble simple vector-like operations. More details on arith-generic can be found here: <https://rdrr.io/cran/terra/man/arith-generic.html>. 
 <br>
@@ -582,7 +582,7 @@ global(sm, quant_fun)   # 25th, and 75th percentile of each layer
 ```
 Note: With a multi-layered raster object, `global` will summarize each layer separately.
 
-## 2.3. Summarizing rasters using shapefles
+## Summarizing rasters using shapefles
 Let's explore using a spatial polygon/shapefile for summarizing a raster (in this case, global SMAP soil moisture) by using `extract` function from the `terra` library. We will also transform global aridity raster to a polygon using `as.polygons` and `st_as_sf` functions to find the mean soil moisture values for each aridity class. 
 
 First, we will use the IPCC shapefile to summarize the soil moisture raster. 
@@ -624,7 +624,7 @@ sm_IPCC_list %>%
 
 ```
 
-## 2.4. DIY: Summarize raster using classified raster
+## DIY: Summarize raster using classified raster
 In the next example, we will convert global aridity raster into a polygon based on aridity classification using `as.polygons` and `st_as_sf` functions. 
 <br>
 Global aridity raster has 5 classes with 5 indicating humid and 1 indicating hyper-arid climate. We will use this polygon to extract values from the Spatraster and summarize soil moisture for each aridity class. 
@@ -664,7 +664,7 @@ axis(1, at=1:5, labels=c("Hyper-arid", "Arid", "Semi-Arid","Sub-humid","Humid"))
 ```
 
 ***
-# CHAPTER 3. Data-cubes or SpatRaster
+# Data-cubes or SpatRaster
 ***
 **Whats is a `Spatraster`?**
 
@@ -678,7 +678,7 @@ In addition, a SpatRaster can store information about the file in which the rast
 
 Note: Raster operations on cell values stored in memory are usually faster but computationally intensive.
 
-## 3.1. Create, subset and visualize SpatRaster
+## Create, subset and visualize SpatRaster
 We will create multilayer SpatRaster for `NDVI` and `SMAP SM` from the sample dataset and demonstrate several applications and operations. Working with SpatRaster is very similar to working with regular arrays or lists. 
 
 ```{r brickoperation1, message = FALSE, warning = FALSE}
@@ -751,10 +751,10 @@ terra::plot(sub_ras_stack[[1:4]],  # Select raster layers to plot
 **Expert Note: For memory intensive rasters to brick formation, the "for" loop method may be better to avoid memory bottleneck.**
 
 
-## 3.2. Geospatial operations on SpatRaster
+## Geospatial operations on SpatRaster
 In this section, we will demonstrate application of several operations on SpatRaster for e.g. extracting time series at user-defined locations, spatial data extraction using spatial polygons/raster, crop and masking of SpatRaster. 
 
-### 3.2.1. Time-series extraction from SpatRaster
+### Time-series extraction from SpatRaster
 Raster extraction is the process of identifying and returning the values associated with a ‘target’ raster at specific locations, based on a vector object. The results depend on the type of vector object used (points, lines or polygons) and arguments passed to the terra::extract() function. 
 
 We will demonstrate two ways of extracting time series information from SpatRaster. 
@@ -843,7 +843,7 @@ ras_stack[row,col][1:5]                # First five elements of data cube for se
 
 ```
 
-### 3.2.2. Spatial extraction/summary from SpatRaster
+### Spatial extraction/summary from SpatRaster
 
 Let's try extracting values of SpatRaster (for all layers simultaneously) based on polygon features using `extract` function. 
 
@@ -885,7 +885,7 @@ plot(unlist(climate_ndvi_mean),
 ```
 
 
-### 3.2.3. Crop and mask SpatRaster
+### Crop and mask SpatRaster
 We will now `crop` and `mask` SpatRaster using shapefile from the disk or from imported shapefile from `spData::us_states`. `crop` function clips the raster to the `extent` provided. `mask` removes the area outside the provided shapefile. Alternatively, we can import shapefile from disk using `read_sf` function. 
 
 ```{r, message = FALSE, warning = FALSE}
@@ -949,7 +949,7 @@ plot(ndvi_mask_states[[1]],
 
 ```
 
-## 3.3. Layer-wise operations on SpatRaster
+## Layer-wise operations on SpatRaster
 We will demonstrate common layer-wise arithmetic operations, summary statistics and data transformation on SpatRaster.
 
 <center>
@@ -1070,7 +1070,7 @@ print(norm_NDVI)
 
 ```
 
-## 3.4. Cell-wise operations with `app`, `lapp`, `tapp` 
+## Cell-wise operations with `app`, `lapp`, `tapp` 
 We will now carry-out cell-wise operations on SpatRaster using the `app()`, `tapp()` and `lapp()` functions. These functions carry operations on **each** cell of a SpatRaster for **all** layers and are generally used to summarize the values of multiple layers into one layer. They are preferable in the presence of large raster datasets. Additionally, they allow you to save an output file directly.
 
 <center>
@@ -1078,7 +1078,7 @@ We will now carry-out cell-wise operations on SpatRaster using the `app()`, `tap
 </center>
 <br>
 
-### 3.4.1. app: Cell-wise operation on all layers
+### app: Cell-wise operation on all layers
 The `app()` function applies a function to each cell of a raster and is used to summarize (e.g., calculating the sum) the values of multiple layers into one layer. 
 
 ```{r, message = FALSE, warning = FALSE}
@@ -1116,7 +1116,7 @@ plot(stat_ras,
 ```
 DIY:Try plotting the same using `tmap`.
 
-### 3.4.2. tapp: Cell-wise operation on layer groups
+### tapp: Cell-wise operation on layer groups
 `tapp()` is an extension of app(), allowing us to select a subset of layers for which we want to perform a certain operation. Let’s have the first two layers as group 1 and the next three as group 2. Function will be applied to each group separately and 2 layers of output will be generated.
 
 ```{r, message = FALSE, warning = FALSE}
@@ -1144,7 +1144,7 @@ plot(stat_ras,
 ```
 DIY: Try plotting the same using `tidyterra`.
 
-### 3.4.3. lapp: layers as function arguments
+### lapp: layers as function arguments
 
 The `lapp()` function allows to apply a function to each cell using layers as arguments. 
 
@@ -1169,7 +1169,7 @@ plot(diff_rast,
 ```
 
 ***
-# CHAPTER 4. Parallel computation for geospatial analysis
+# Parallel computation for geospatial analysis
 ***
 
 Many computations in R can be made faster by the use of parallel computation. Generally, parallel computation is the simultaneous execution of different pieces of a larger computation across multiple computing processors or cores. The basic idea is that if you can execute a computation in X seconds on a single processor, then you should be able to execute it in X/n seconds on n processors. 
@@ -1185,9 +1185,9 @@ plot(mean(SMAPBrk, na.rm=TRUE), asp=NA)
 
 ```
 
-## 4.1. Cellwise implimentation of functions
+## Cellwise implimentation of functions
 
-### 4.1.1. Apply custom function to pixel time series
+### Apply custom function to pixel time series
 Once we have imported the `NetCDF` file as SpatRaster, we wil apply a slightly modified version of previously used function `my_fun` for calculating mean, variance and skewness for time series data for each cell in parallel. We will use `terra::app` function to apply `my_fun` on SpatRaster in parallel.
 
 ***
@@ -1241,7 +1241,7 @@ plot(stat_brk, col=mypal2)
 
 ```
 
-### 4.2.1. Best practices for large-scale operations
+### Best practices for large-scale operations
 
 Error handling is the art of debugging unexpected problems in your code. One easy solution when looping through customized functions is to include `print()` messages after each major operation which can help indicate where the error might be happening. Furthermore when dealing with large spatial data:
 
@@ -1263,9 +1263,9 @@ b) Use `tryCatch` **carefully** as it may suppress legitimate errors as well, ge
 
 ***
 
-## 4.2. Layerwise implimentation of functions
+## Layerwise implimentation of functions
 
-### 4.2.1. Data cubes as lists
+### Data cubes as lists
 We will convert Spatraster to a list of rasters and then we will apply `my_fun` to each element of the list in parallel using `future_lapply`. 
 
 ```{r, message = FALSE, warning = FALSE}
@@ -1302,11 +1302,11 @@ toc()
 
 ```
 
-### 4.2.2. Blockwise summary of feature extracted data
+### Blockwise summary of feature extracted data
 In this section we will use a shapefile to extract cell values from a SpatRaster as a list using `exact_extract`. Summary statistics will be calculated in parallel using `my_fun` for dataset for each feature. 
 
 <center>
-![](./SampleData-master/images/blockwiseoperation2023.png){width=90%}
+![](./SampleData-master/images/blockwiseoperation2022.png){width=90%} 
 </center>
 <br>
 
@@ -1423,10 +1423,10 @@ mean_map
 ```
 
 ***
-# CHAPTER 5. Supplementary material
+# Supplementary material
 ***
 
-## 5.1. Exporting SpatRaster to NetCDF Data
+## Exporting SpatRaster to NetCDF Data
 When working on a project, you will often need to use the same SpatRaster over and over again. Hence, its convenient to store the model outputs as NetCDFs which can be imported as SpatRaster later for further analysis. Here we will look at the method to export SpatRaster to NetCDF. 
 
 ***
@@ -1458,7 +1458,7 @@ terra::writeCDF(rb,                               #SpatRaster
 
 ```
 
-## 5.2. Updating R using RStudio
+## Updating R using RStudio
 The operations in this tutorial are based on R `version 4.1.1- Kick Things` and `version 4.0.3 - Bunny-Wunnies Freak Out`. If necessary, update R from Rstudio using the `updateR` function from the `installr` package. 
 
 ``` 
@@ -1466,10 +1466,10 @@ install.packages("installr")
 library(installr)
 updateR(keep_install_file=TRUE)
 ```
-## 5.3. Changing Temp files for large storage
+## Changing Temp files for large storage
 When processing large rasters/ vectors, you may run out of storage space due to large size of temporary files being generated during processing. Changing temp directory to an external disk with larger storage helps in such case. Follow this discussion for more details: <https://stackoverflow.com/questions/17107206/change-temporary-directory>.
 
-## 5.4. Resampling with rgdalwarp
+## Resampling with rgdalwarp
 When processing high resolution rasters, you may run out of storage space when using the `terra::resample()`. One way to get around it is by using `rgdalwarp()`. It is an R wrapper for the 'gdalwarp' function that is part of the Geospatial Data Abstraction Library (GDAL), and provides utility for reprojecting rasters into any valid projection. For more details read: <https://www.rdocumentation.org/packages/gdalUtils/versions/2.0.3.2/topics/gdalwarp>. 
 <br>
 The following is an example for resampling MODIS ET (500m) data to 25km resolution.
